# File2File-Desktop

./: Cargo.toml  README.md  build.rs  build.sh
assets/: file2file_icon.icns
lib/: RelayConn.go  libwebrpc-Linux-arm64.h  libwebrpc-Linux.h  libwebrpc-Mac.h
src/: main.rs
