[package]
name = "file2file-desktop-rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
eframe = "0.33.3"
image = "0.25.9"
opener = "0.8.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
winres = "0.1.12"
