[package]
name = "file2file"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
ab_glyph = "0.2.32"
chrono = "0.4.44"
eframe = "0.33.3"
image = "0.25.9"
imageproc = "0.25.0"
opener = "0.8.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
global-hotkey = "0.7.0"
screenshots = "0.8.10"

[build-dependencies]
winres = "0.1.12"
